# dbsm-dashboard

./: .gitignore  README.md  buchbestand.ipynb  buchbestand.py  dbsm-dashboard.py  dbsm_orte.csv  filter.md  inkunabel_count.csv  objektgattung.csv  orte_geo.csv  pyproject.toml  requirements.txt  rundschreiben_geo_neu.csv  wz_geo.csv  zeit.csv
